Removed flex-wrap on information-wrapper to prevent information elements from overlapping upon wrapping

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,6 @@
 
 .information-wrapper {
     display: flex;
-    flex-wrap: wrap;
     gap: 70px;
 }
 
